--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <!-- Logo -->
   <section class="logo">
-    <img src="/ping-coming-soon-page-master/ping-coming-soon-page-master/images/logo.svg" alt="">
+    <img src="images/logo.svg" alt="">
   </section>
 
   <!-- header -->
@@ -39,7 +39,7 @@
 
   <!-- Image -->
   <section class="image">
-    <img class="illustration" src="/ping-coming-soon-page-master/ping-coming-soon-page-master/images/illustration-dashboard.png" alt="">
+    <img class="illustration" src="images/illustration-dashboard.png" alt="">
   </section>
   
   <!-- Social media icons -->
